Add table extraction container